<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:background="@drawable/cus_background_login"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/nsh_logo"
            app:riv_corner_radius="50dip"
            app:riv_mutate_background="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif"
            android:text="NSH"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />


        <LinearLayout
            android:id="@+id/layout_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_account"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitCenter"
                android:src="@drawable/nsh_logo"
                app:riv_corner_radius="40dip"
                app:riv_mutate_background="true" />

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_user_saved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="@dimen/title_nofity"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/layout_login_mid"
                android:layout_alignTop="@+id/layout_login_mid"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/cus_background_login_mid"
                android:alpha="0.5">
            </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_not_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorWhite">
                <EditText
                    android:id="@+id/txtUsernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/hint_login_username"
                    android:textColor="@color/colorWhite"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/txtPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/hint_login_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/cus_button_events"
                android:text="@string/login_button"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/txt_login_other"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@drawable/cus_background_textview"
            android:clickable="true"
            android:text="@string/login_other"/>

        <TextView
            android:id="@+id/txt_imei_info"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@drawable/cus_background_textview"
            android:clickable="true"
            android:text="@string/login_imei_info"/>

    </LinearLayout>

</LinearLayout>