<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:background="@drawable/cus_background_login"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:riv_corner_radius="50dip"
            android:scaleType="fitCenter"
            app:riv_mutate_background="true"
            android:src="@drawable/nsh_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif"
            android:text="NSH"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/layout_login_mid"
                android:layout_alignTop="@+id/layout_login_mid"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/cus_background_login_mid"
                android:alpha="0.5">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_login_mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <!--EditText
                    android:id="@+id/txtUsernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/cus_edit_text_login"
                    android:drawableLeft="@drawable/ic_user_login_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hint_login_username"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

                <EditText
                    android:id="@+id/txtPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/cus_edit_text_login"
                    android:drawableLeft="@drawable/icon_pass_login_32"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/hint_login_pass"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

                <CheckBox
                    android:id="@+id/chkRememberLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/login_remember"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone"/-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/colorWhite">
                    <EditText
                        android:id="@+id/txtUsernameLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:enabled="false"
                        android:hint="@string/hint_login_username"
                        android:textColor="@color/colorWhite"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/colorWhite">

                    <EditText
                        android:id="@+id/txtPassLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:enabled="false"
                        android:hint="@string/hint_login_pass"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/cus_button_events"
                    android:text="@string/login_button"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>